--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,7 @@
     <string name="drawer_close">Closed</string>
     <string name="action_websearch">Web search</string>
     <string name="app_not_available">Not available</string>
-
-    <string-array name="meal_list">
-        <item>Hamburger</item>
-        <item>Hotdog</item>
-        <item>Pancakes</item>
-    </string-array>
+    
+    <string name="select_date">Select date</string>
 
 </resources>
