--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="add_widget">Add widget</string>
 
     <string name="internet_failed">Internet connection failed!</string>
+    <string name="database_failed">Database error, please manually refresh</string>
 
 </resources>
