--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     the UCSCDining Github page.</string>
     <string name="googlicense_title">SlidingTabLayout and SlidingTabStrip</string>
     <string name="googlicense_desc">Released by Google under the Apache 2.0 license.</string>
-    <string name="jsouplicense_title">Jsoup 1.8.2</string>
-    <string name="jsouplicense_desc">Released under MIT license. Click here to visit the Jsoup
+    <string name="jsouplicense_title">jsoup 1.8.2</string>
+    <string name="jsouplicense_desc">Released under MIT license. Click here to visit the jsoup
     webpage.</string>
 
 </resources>
