--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,15 +8,17 @@
     <string name="select_date">Select date</string>
 
     <string name="internet_failed">Internet connection failed!</string>
-    <string name="database_failed">Database error, please manually refresh</string>
+    <string name="database_failed">Database error, please swipe down to manually refresh</string>
 
-    <string name="about">About</string>
-    <string name="appinfo">Info</string>
+    <string name="about">Settings / About</string>
+    <string name="settings">Settings</string>
     <string name="licenses">Licenses</string>
 
-    <string name="desc">By Nicky Ivy.</string>
+    <string name="default_college">Default College</string>
+    <string name="default_desc">College that will be shown by default when loading the app or
+        placing the widget.</string>
 
-    <string name="mylicense_title">UCSC Dining Main App</string>
+    <string name="mylicense_title">UCSC Dining</string>
     <string name="mylicense_desc">Released under GPL v2 license. Click here to visit
     the UCSCDining Github page.</string>
     <string name="googlicense_title">SlidingTabLayout and SlidingTabStrip</string>
