--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="lunch">Lunch</string>
     <string name="dinner">Dinner</string>
 
+    <string name="nutinfo">Nutritional Info</string>
+
 </resources>
