--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="default_desc">College that will be shown by default when loading the app or
         placing the widget.</string>
 
+    <string name="default_college_2nd">Secondary Default College</string>
+    <string name="default_desc_2nd">College that will be shown by default when the main default
+        dining hall is closed.</string>
+
     <string name="mylicense_title">UCSC Dining</string>
     <string name="mylicense_desc">Released under GPL v2 license. Click here to visit
     the UCSCDining Github page.</string>
@@ -26,6 +30,9 @@
     <string name="jsouplicense_title">jsoup 1.8.2</string>
     <string name="jsouplicense_desc">Released under MIT license. Click here to visit the jsoup
     webpage.</string>
+    <string name="fablicense_title">FloatingActionButton 1.3.0</string>
+    <string name="fablicense_desc">Maintained by makovkastar. Released under MIT license. Click
+        here to visit the FloatingActionButton Github page.</string>
 
     <string name="breakfast">Breakfast</string>
     <string name="lunch">Lunch</string>
