--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="default_desc_2nd">College that will be shown by default when the main default
         dining hall is closed.</string>
 
+    <string name="dark_theme">Dark Theme</string>
+    <string name="dark_theme_desc">Optimized for AMOLED screens.</string>
+
     <string name="mylicense_title">Slug Food</string>
     <string name="mylicense_desc">Released under GPL v2 license. Click here to visit
     the Slug Food Github page.</string>
