--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
 
     <string name="about">Settings / About</string>
     <string name="settings">Settings</string>
-    <string name="licenses">Licenses</string>
+    <string name="sub_about">About</string>
 
     <string name="default_college">Default College</string>
     <string name="default_desc">College that will be shown by default when loading the app or
@@ -30,6 +30,9 @@
     <string name="background_load_desc">Automatically load data in background. Automatically enabled
         when widget or favorite item notifications are enabled.</string>
 
+    <string name="licenses_cat">Licences</string>
+    <string name="licenses_cat_desc">View info on licenses for software used in this app.</string>
+
     <string name="mylicense_title">Slug Food</string>
     <string name="mylicense_desc">Released under GPL v2 license. Click here to visit
     the Slug Food Github page.</string>
@@ -41,6 +44,26 @@
     <string name="fablicense_title">FloatingActionButton 1.3.0</string>
     <string name="fablicense_desc">Maintained by makovkastar. Released under MIT license. Click
         here to visit the FloatingActionButton Github page.</string>
+
+    <string name="favorites_title">Favorite Items</string>
+
+    <string name="notifications_settings">Notification Settings</string>
+    <string name="notifications_settings_desc">Enable notifications for events such as Healthy
+        Mondays and College Nights, as well as for when your selected favorite items are
+        available.</string>
+
+    <string name="notifications_events">Event Notifications</string>
+    <string name="notifications_events_desc">Enable notifications for Healthy Mondays, Farm Fridays,
+        and College Nights.</string>
+
+    <string name="notifications_favorites">Favorite Item Notifications</string>
+    <string name="notifications_favorites_desc">Enable notifications for favorite items.</string>
+
+    <string name="notifications_favoriteslist">Favorite Items</string>
+    <string name="notifications_favoriteslist_desc">Manage favorite items</string>
+
+    <string name="notifications_dhalls">Dining Halls</string>
+    <string name="notifications_dhalls_desc">Only give notifications for these dining halls.</string>
 
     <string name="breakfast">Breakfast</string>
     <string name="lunch">Lunch</string>
