--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,26 +42,23 @@
     the Slug Food Github page.</string>
     <string name="googlicense_title">SlidingTabLayout and SlidingTabStrip</string>
     <string name="googlicense_desc">Released by Google under the Apache 2.0 license.</string>
-    <string name="jsouplicense_title">jsoup 1.8.2</string>
+    <string name="jsouplicense_title">jsoup 1.10.1</string>
     <string name="jsouplicense_desc">Released under MIT license. Click here to visit the jsoup
     webpage.</string>
-    <string name="fablicense_title">FloatingActionButton 1.3.0</string>
-    <string name="fablicense_desc">Maintained by makovkastar. Released under MIT license. Click
-        here to visit the FloatingActionButton Github page.</string>
 
     <string name="favorites_title">Favorite Items</string>
 
     <string name="notifications_settings">Notification Settings</string>
-    <string name="notifications_settings_desc">Enable notifications for events such as Healthy
-        Mondays and College Nights, as well as for when your selected favorite items are
-        available.</string>
+    <string name="notifications_settings_desc">Enable notifications for events such as College
+        Nights, as well as for when your selected favorite items are available.</string>
 
     <string name="notifications_events">Event Notifications</string>
-    <string name="notifications_events_desc">Enable notifications for Healthy Mondays, Farm Fridays,
-        and College Nights.</string>
+    <string name="notifications_events_desc">Enable notifications for College Nights and Farm
+        Fridays. (Also includes Healthy Mondays, but these do not seem to be happening anymore.)</string>
 
     <string name="notifications_favorites">Favorite Item Notifications</string>
-    <string name="notifications_favorites_desc">Enable notifications for favorite items.</string>
+    <string name="notifications_favorites_desc">Enable notifications for favorite items. Long press
+    on an item in the menu to add it to your favorites, or add it manually below.</string>
 
     <string name="notifications_favoriteslist">Favorite Items</string>
     <string name="notifications_favoriteslist_desc">Manage favorite items</string>
