Fix notifications on Android O

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,7 @@
 
     <string name="nutinfo">Nutritional Info</string>
 
+    <string name="notification_channel_meal">Favorite Items</string>
+    <string name="notification_channel_events">Events</string>
+
 </resources>
